# ztrade-ares-7x24

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/: repo-meta.yml
ar724/: __init__.py  budget.py  cli.py  conductor.py  config_loader.py  dag.py  db.py  evaluator_runner.py  event_types.py  heartbeat.py  observability.py  oscillation.py  promotion_gate.py  role_loader.py  safety.py  spawner.py  tmux_manager.py
ar724/adapters/: __init__.py
ar724/live_callbacks/: __init__.py
ar724/runbooks/: 00-circuit-breaker-tripped.md  01-pause-and-resume.md  02-rollback-last-promotion.md  03-disable-mcp-server.md  04-rotate-secrets.md  05-replay-evaluator.md  06-inspect-cost-spike.md  07-recover-orphaned-jobs.md  08-restore-sqlite-snapshot.md  09-extend-conductor-leases.md  10-vacation-handoff.md
autoresearch/v2/: program.md
autoresearch/v2/protocol/: evaluator_contract.md  results.tsv  v47_params.json
autoresearch/v2/roles/: backtest_reviewer.yaml  backtester.yaml  factor_combiner.yaml  factor_validator.yaml
config/: model_profiles.yaml  role_routing.yaml  safety_policy.yaml
references/: runbooks
schemas/: backtest_reviewer.output.schema.json  backtester.output.schema.json  factor_combiner.output.schema.json  factor_validator.output.schema.json
scripts/: setup.sh
tests/: test_budget.py  test_conductor.py  test_dag.py  test_db_cas.py  test_evaluator_runner.py  test_heartbeat.py  test_lifecycle_audit.py  test_observability.py  test_oscillation.py  test_promotion_gate.py  test_role_loader.py  test_safety.py  test_state_authority.py  test_tmux.py
